--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "license": "MIT",
   "scripts": {
     "start": "node -r dotenv/config bin/www",
-    "develop": "nodemon -r dotenv/config bin/www",
+    "dev": "nodemon -r dotenv/config bin/www",
     "db:create": "sequelize db:create",
     "db:drop": "sequelize db:drop",
     "db:migrate": "sequelize db:migrate",
-    "db:seed": "sequelize db:seed:undo:all && sequelize db:seed:all"
+    "db:seed": "sequelize db:seed:undo:all && sequelize db:seed:all",
+    "coverage": "jest run --coverage",
+    "test": "jest"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -19,12 +21,17 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "mysql2": "^3.10.1",
     "pg": "^8.7.3",
     "sequelize": "^6.20.1",
     "sequelize-cli": "^6.4.1",
+    "supertest": "^7.0.0",
     "swagger-ui-express": "^4.4.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "eslint": "^9.5.0",
+    "jest": "^29.7.0",
     "nodemon": "^2.0.16"
   }
 }
