--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "swagger-ui-express": "^4.4.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.5.0",
     "@types/jest": "^29.5.12",
     "eslint": "^9.5.0",
+    "globals": "^15.6.0",
     "jest": "^29.7.0",
     "nodemon": "^2.0.16"
   }
